--- a/app/design/frontend/Satoshi/Hyva/web/satoshi/theme/app.scss
+++ b/app/design/frontend/Satoshi/Hyva/web/satoshi/theme/app.scss
@@ -154,3 +154,8 @@ h3 {
   @import "components/card-product";
 }
 @import "components/progress-bar";
+
+.sidebar-main {
+  // TODO: Remove from here when applied in side bar template
+  @apply flex-shrink-0 w-[275px];
+}
