Fix sidebar margin in category page

--- a/app/design/frontend/Satoshi/Hyva/web/satoshi/theme/app.scss
+++ b/app/design/frontend/Satoshi/Hyva/web/satoshi/theme/app.scss
@@ -157,5 +157,5 @@ h3 {
 
 .sidebar-main {
   // TODO: Remove from here when applied in side bar template
-  @apply flex-shrink-0 w-[275px];
+  @apply flex-shrink-0 w-[275px] ml-[2rem];
 }
