--- a/app/design/frontend/Satoshi/Hyva/Magento_Directory/templates/currency.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Directory/templates/currency.phtml
@@ -10,17 +10,15 @@ declare(strict_types=1);
 
 use Hyva\Theme\Model\ViewModelRegistry;
 use Hyva\Theme\ViewModel\Currency;
-use Hyva\Theme\ViewModel\HeroiconsSolid;
 use Hyva\Theme\ViewModel\SvgIcons;
 use Magento\Framework\Escaper;
 use Magento\Framework\View\Element\Template;
-
-// phpcs:disable Generic.Files.LineLength.TooLong
 
 /** @var Template $block */
 /** @var Escaper $escaper */
 /** @var ViewModelRegistry $viewModels */
 
+/** @var SvgIcons $hyvaicons */
 $hyvaicons = $viewModels->require(SvgIcons::class);
 
 /** @var Currency $currencyViewModel */
@@ -29,29 +27,7 @@ $currencyViewModel = $viewModels->require(Currency::class);
 <?php if ($currencyViewModel->getCurrencyCount() > 1): ?>
     <?php $currencies = $currencyViewModel->getCurrencies(); ?>
     <?php $currentCurrencyCode = $currencyViewModel->getCurrentCurrencyCode(); ?>
-    <div x-data="{
-            open: false,
-            search: function (value) {
-                const items = document.querySelectorAll('#currency-list li');
-                items.forEach((item) => {
-                    if (item.textContent.toLowerCase().includes(value.trim().toLowerCase())) {
-                        item.style.display = 'block';
-                    } else {
-                        item.style.display = 'none';
-                    }
-                });
-            },
-            toggleDropdown() {
-                if(this.open) {
-                    this.open = false;
-                } else {
-                    this.open = true;
-                    this.$nextTick(() => {
-                        this.$refs.currencySearch.focus();
-                    });
-                }
-            },
-        }"
+    <div x-data="Dropdown()" x-init="init()" x-ref="DropdownWrapper"
          class="w-full sm:w-1/2 md:w-full pr-4"
     >
         <h2
@@ -62,28 +38,28 @@ $currencyViewModel = $viewModels->require(Currency::class);
         </h2>
         <div class="relative inline-block text-left">
             <div>
-                <button @click.prevent="toggleDropdown"
-                        @keydown.window.escape="open=false"
+                <button @click.prevent="toggleDropdown()"
+                        @keydown.window.escape="hide()"
                         type="button"
                         class="inline-flex items-center justify-between gap-6 whitespace-nowrap rounded-sm border bg-white px-6 py-3"
                         aria-haspopup="true"
-                        :aria-expanded="open"
+                        :aria-expanded="isDropdownVisible"
                 >
-                    <?php if ($currencies[$currentCurrencyCode]): ?>
+                    <?php if ($currencies[$currentCurrencyCode] ?? false): ?>
                         <?= $escaper->escapeHtml($currencies[$currentCurrencyCode]['name']) ?> |
                     <?php endif; ?>
                     <?= $escaper->escapeHtml($currentCurrencyCode) ?>
-                    <span :class="open ? 'rotate-90' : '-rotate-90'"
+                    <span :class="isDropdownVisible ? 'rotate-90' : '-rotate-90'"
                           class="transition-transform motion-reduce:transition-none">
                         <?= $hyvaicons->renderHtml('chevron'); ?>
                     </span>
                 </button>
             </div>
             <div x-cloak=""
-                 x-show="open"
+                 x-show="isDropdownVisible"
                  class="absolute z-10 min-w-full rounded-sm border border-gray-300 bg-white p-2 pt-3 bottom-full"
                  aria-labelledby="currency-heading"
-                 @click.away="open = false"
+                 @click.away="hide()"
             >
                 <div class="p-2">
                     <label for="currency-search" class="sr-only">
