--- a/app/design/frontend/Satoshi/Hyva/Hyva_Theme/templates/page/js/advanced-form-validation.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Hyva_Theme/templates/page/js/advanced-form-validation.phtml
@@ -6,6 +6,8 @@
  * See https://hyva.io/license
  */
 
+// changes: updated validation message for required fields, and enhanced error message display (added 'text-error' and '!border-error' classes)
+
 declare(strict_types=1);
 
 use Hyva\Theme\Model\ViewModelRegistry;
