INTERNAL-58: Change size of product cart and add ProductsDetails block

--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/list/item-details-article.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/list/item-details-article.phtml
@@ -45,9 +45,8 @@ if (!$isAlpineTemplate) {
     $featuredImage = null;
 }
 ?>
-<!--I made a product card 1/2 of grid column width to make it look more similar to original design-->
 <article
-    class="z-10 relative flex h-full w-1/2 flex-col items-stretch justify-start text-start"
+    class="z-10 relative flex h-full w-full flex-col items-stretch justify-start text-start"
     x-data="ProductPage()"
     <?php if (!$isAlpineTemplate) : ?>
         <?php // TODO: Create x-init to set correct product data ?>
