enhance comments of overridden files

--- a/app/design/frontend/Satoshi/Hyva/Hyva_Theme/templates/page/js/advanced-form-validation.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Hyva_Theme/templates/page/js/advanced-form-validation.phtml
@@ -6,9 +6,13 @@
  * See https://hyva.io/license
  */
 
-// changes: updated validation message for required fields, and enhanced error message display (added 'text-error' and '!border-error' classes)
-
 declare(strict_types=1);
+
+/**
+ * Custom Changes:
+ * 1. Updated validation message for required fields
+ * 2. Enhanced error message display (added 'text-error' and '!border-error' classes)
+ */
 
 use Hyva\Theme\Model\ViewModelRegistry;
 use Hyva\Theme\ViewModel\DeployMode;
