--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/title.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/title.phtml
@@ -9,6 +9,11 @@
 // Removed <h1> title heading
 declare(strict_types=1);
 
+/**
+ * Custom Changes:
+ * 1. Removed <h1> title heading
+ */
+
 use Magento\Framework\Escaper;
 use Magento\Theme\Block\Html\Title;
 
