--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/messages.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/messages.phtml
@@ -8,6 +8,12 @@
 
 declare(strict_types=1);
 
+/**
+ * Custom Changes:
+ * 1. Added a conditional class for error messages to apply 'text-error' styling when the message type is 'error'.
+ * 2. Removed the close button for message dismissal to simplify the UI.
+ */
+
 use Hyva\Theme\Model\ViewModelRegistry;
 use Hyva\Theme\ViewModel\HeroiconsOutline;
 use Hyva\Theme\ViewModel\StoreConfig;
