--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/breadcrumbs.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/breadcrumbs.phtml
@@ -9,107 +9,88 @@ use Hyva\Theme\Model\ViewModelRegistry;
 /** @var SvgIcons $hyvaicons */
 $hyvaicons = $viewModels->require(SvgIcons::class);
 
-// TODO: Find out why breadcrumbs do not appear on customer account pages
-
 // TODO: Make dynamic
 $isAlpineTemplate = false;
-$renderBreadcrumbs = false;
-$renderOnMobile = false;
 
 $pageType = $this->getRequest()->getFullActionName();
-$pageTypes = ['cms_index_index', 'checkout_cart_index', 'cms_noroute_index', 'customer_account_index', 'customer_address_index', 'sales_order_history', 'giftvoucher_index_index'];
-$renderBreadcrumbs = !in_array($pageType, $pageTypes);
+$excludeBreadcrumbs = ['cms_index_index', 'checkout_cart_index', 'cms_noroute_index', 'customer_account_index', 'customer_address_index', 'sales_order_history', 'giftvoucher_index_index'];
+$renderBreadcrumbs = !in_array($pageType, $excludeBreadcrumbs);
 
-$pageTYpes = ['catalog_category_view', 'catalog_product_view', 'catalogsearch_result_index'];
-$renderOnMobile = in_array($pageType, $pageTypes);
+$mobilePageTypes = ['catalog_category_view', 'catalog_product_view', 'catalogsearch_result_index'];
+$renderOnMobile = in_array($pageType, $mobilePageTypes);
+
 ?>
 
-<?php if ($crumbs && is_array($crumbs) && $renderBreadcrumbs): ?>
+<?php if (!empty($crumbs) && is_array($crumbs) && $renderBreadcrumbs): ?>
     <nav
-        class="breadcrumbs content-wrapper mx-auto my-8 px-4 <?php if ($renderOnMobile): ?>hidden<?php endif; ?> md:block"
+        class="breadcrumbs content-wrapper mx-auto my-8 px-4 <?= $renderOnMobile ? 'hidden' : '' ?> md:block"
         role="navigation"
         aria-label="<?= __('Breadcrumbs') ?>"
     >
-        <div role="list" class="truncate">
-            <?php foreach ($crumbs
+        <div role="list" class="truncate px-2">
+            <?php foreach ($crumbs as $crumbName => $crumbInfo): ?>
+                <div role="listitem" class="breadcrumb" data-crumb-name="<?= $escaper->escapeHtmlAttr($crumbName) ?>">
+                    <?php if ($isAlpineTemplate): ?>
+                        <template x-if="$store['transition'].pageType === 'category'">
+                            <div class="contents">
+                                <div role="listitem" x-text="$store['transition'].pageData?.title"></div>
+                            </div>
+                        </template>
 
-            as $crumbName => $crumbInfo) : ?>
-            <div role="listitem" class="breadcrumb" <?= $block->escapeHtmlAttr($crumbName) ?>">
-            <?php if ($isAlpineTemplate): ?>
-                <template x-if="$store['transition'].pageType === 'category'">
-                    <div class="contents">
-                        <div role="listitem"
-                             x-text="$store['transition'].pageData?.title"></div>
-                    </div>
-                </template>
+                        <template x-if="$store['transition'].pageType === 'article'">
+                            <div class="contents">
+                                <div role="listitem" class="breadcrumb">
+                                    <!-- TODO: Make blog url and title dynamic -->
+                                    <a x-element-transition-trigger href="{{ blog.url }}" aria-current="page">
+                                        {{ blog.title }}
+                                    </a>
+                                </div>
+                                <div role="listitem" class="mx-4 inline-block text-neutral-500 contrast-more:text-secondary-700" aria-hidden="true">
+                                    <?= $hyvaicons->renderHtml('breadcrumb-chevron'); ?>
+                                </div>
+                                <div role="listitem" class="breadcrumb" x-text="$store['transition'].pageData?.title"></div>
+                            </div>
+                        </template>
 
-                <template x-if="$store['transition'].pageType === 'article'">
-                    <div class="contents">
-                        <div role="listitem" class="breadcrumb">
-                            <!-- TODO: Make blog url and title dynamic -->
-                            <a x-element-transition-trigger href="{{ blog.url }}"
-                               aria-current="page">
-                                {{ blog.title }}
-                            </a>
-                        </div>
-                        <div
-                            role="listitem"
-                            class="mx-4 inline-block text-neutral-500 contrast-more:text-secondary-700"
-                            aria-hidden="true"
-                        >
-                            <?= $hyvaicons->renderHtml('breadcrumb-chevron'); ?>
-                        </div>
-                        <div role="listitem" class="breadcrumb"
-                             x-text="$store['transition'].pageData?.title"></div>
-                    </div>
-                </template>
+                        <template x-if="$store['transition'].pageType === 'product'">
+                            <div class="contents">
+                                <div role="listitem" class="breadcrumb" x-text="$store['transition'].pageData?.title"></div>
+                            </div>
+                        </template>
 
-                <template x-if="$store['transition'].pageType === 'product'">
-                    <div class="contents">
-                        <div role="listitem" class="breadcrumb"
-                             x-text="$store['transition'].pageData?.title"></div>
-                    </div>
-                </template>
+                        <template x-if="$store['transition'].pageType === 'search'">
+                            <div class="contents">
+                                <div
+                                    x-data="{
+                                        searchTerm: $store['transition'].pageData?.search,
+                                        resultCount: $store['transition'].pageData?.resultCount,
+                                        text: '<?= __('%1 result found for "%2"') ?>',
+                                    }"
+                                    role="listitem"
+                                    class="breadcrumb"
+                                    x-text="hyva.strf(text, resultCount, searchTerm)"
+                                ></div>
+                            </div>
+                        </template>
 
-                <template x-if="$store['transition'].pageType === 'search'">
-                    <div class="contents">
-                        <div
-                            x-data="{
-                                searchTerm: $store['transition'].pageData?.search,
-                                resultCount: $store['transition'].pageData?.resultCount,
-                                text: '<?= __('%1 result found for "%2"') ?>',
-                            }"
-                            role="listitem"
-                            class="breadcrumb"
-                            x-text="hyva.strf(text, resultCount, searchTerm)"
-                        ></div>
-                    </div>
-                </template>
-
-            <?php else: ?>
-                <?php if ($crumbInfo['link']) : ?>
-                    <div role="listitem"
-                         class="inline font-bold text-neutral-500 contrast-more:text-secondary-700">
-                        <a x-element-transition-trigger href="<?= $escaper->escapeUrl($crumbInfo['link']) ?>">
-                            <?= $block->escapeHtml($crumbInfo['label']) ?>
-                        </a>
-                    </div>
-                    <div
-                        role="listitem"
-                        class="mx-4 inline-block text-neutral-500 contrast-more:text-secondary-700"
-                        aria-hidden="true"
-                    >
-                        <?= $hyvaicons->renderHtml('breadcrumb-chevron'); ?>
-                    </div>
-                <?php elseif ($crumbInfo['last']) : ?>
-                    <div role="listitem" class="breadcrumb">
-                        <?= $block->escapeHtml($crumbInfo['label']) ?>
-                    </div>
-                <?php endif; ?>
-            <?php endif; ?>
-
-        </div>
-        <?php endforeach; ?>
+                    <?php else: ?>
+                        <?php if (!empty($crumbInfo['link'])): ?>
+                            <div role="listitem" class="inline font-bold text-neutral-500 contrast-more:text-secondary-700">
+                                <a x-element-transition-trigger href="<?= $escaper->escapeUrl($crumbInfo['link']) ?>">
+                                    <?= $escaper->escapeHtml($crumbInfo['label']) ?>
+                                </a>
+                            </div>
+                            <div role="listitem" class="mx-4 inline-block text-neutral-500 contrast-more:text-secondary-700" aria-hidden="true">
+                                <?= $hyvaicons->renderHtml('breadcrumb-chevron'); ?>
+                            </div>
+                        <?php elseif (!empty($crumbInfo['last'])): ?>
+                            <div role="listitem" class="breadcrumb">
+                                <?= $escaper->escapeHtml($crumbInfo['label']) ?>
+                            </div>
+                        <?php endif; ?>
+                    <?php endif; ?>
+                </div>
+            <?php endforeach; ?>
         </div>
     </nav>
 <?php endif; ?>
